1ere version mobile complete avec correctif

--- a/src/styles/ContactForm.sass
+++ b/src/styles/ContactForm.sass
@@ -14,7 +14,8 @@
   font-family: 'linea', sans-serif
   font-size: 92px
   @include respond-to(mobile)
-    font-size: 68px
+    font-size: 59px
+    margin: 30px 0 -7px 0
   
   
 .contact-form
@@ -26,7 +27,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
   font-family: Arial, sans-serif
   @include respond-to(mobile)
-    max-width: 360px
+    max-width: 320px
     height: auto
     width: auto
     margin: 0 auto
