--- a/src/styles/Home.sass
+++ b/src/styles/Home.sass
@@ -25,7 +25,7 @@
         font-family: 'linecap', sans-serif
         font-size: 70px
         line-height: 20px
-        margin: 35px 0 0 0
+        margin: 30px 0 0 0
         @include respond-to(mobile)
           font-size: 130px
           line-height: 62px
