--- a/src/styles/Presentation.sass
+++ b/src/styles/Presentation.sass
@@ -5,7 +5,7 @@
     align-items: center
     margin: 100px 0 200px 0
     @include respond-to(mobile)
-        margin: 50px 0 50px 0
+        margin: 30px 0 50px 0
     .profil-picture
         width: auto
         height: 300px
